--- a/archives/toutiao-search/2023-11-30.md
+++ b/archives/toutiao-search/2023-11-30.md
@@ -1,61 +1,74 @@
 # 2023-11-30
 
-共 140 条
+共 151 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 30 2023 09:44:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 30 2023 10:19:49 GMT+0800 (China Standard Time) -->
+1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
 1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
-1. [雷军回应向武大捐13亿：还愿之旅](https://so.toutiao.com/search?keyword=雷军回应向武大捐13亿：还愿之旅)
 1. [多地推动一刻钟便民生活圈建设](https://so.toutiao.com/search?keyword=多地推动一刻钟便民生活圈建设)
-1. [航司回应“献血事件”：包机转运属实](https://so.toutiao.com/search?keyword=航司回应“献血事件”：包机转运属实)
-1. [中国关于解决巴以冲突的立场文件](https://so.toutiao.com/search?keyword=中国关于解决巴以冲突的立场文件)
+1. [雷军回应向武大捐13亿：还愿之旅](https://so.toutiao.com/search?keyword=雷军回应向武大捐13亿：还愿之旅)
+1. [患儿挤爆广州儿科门急诊？记者走访](https://so.toutiao.com/search?keyword=患儿挤爆广州儿科门急诊？记者走访)
 1. [杨鸣妻子删除简介和与丈夫合照](https://so.toutiao.com/search?keyword=杨鸣妻子删除简介和与丈夫合照)
-1. [献血事件女子丈夫：简化经过造成误解](https://so.toutiao.com/search?keyword=献血事件女子丈夫：简化经过造成误解)
-1. [拼多多市值一度超越阿里巴巴](https://so.toutiao.com/search?keyword=拼多多市值一度超越阿里巴巴)
+1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
+1. [美国一官员嫖娼遇警察卧底](https://so.toutiao.com/search?keyword=美国一官员嫖娼遇警察卧底)
 1. [支原体肺炎是新冠变异？](https://so.toutiao.com/search?keyword=支原体肺炎是新冠变异？)
-1. [马斯克：以要摧毁哈马斯别无选择](https://so.toutiao.com/search?keyword=马斯克：以要摧毁哈马斯别无选择)
+1. [中国关于解决巴以冲突的立场文件](https://so.toutiao.com/search?keyword=中国关于解决巴以冲突的立场文件)
 1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
 1. [4个公租房小区排查出766户公职人员](https://so.toutiao.com/search?keyword=4个公租房小区排查出766户公职人员)
 1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
 1. [炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=炫耀动员公务员献血让人如何理性)
 1. [招生办女主任出轨校长？女方回应](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？女方回应)
+1. [女儿给父亲买“犟驴”蛋糕过生日](https://so.toutiao.com/search?keyword=女儿给父亲买“犟驴”蛋糕过生日)
+1. [朱立伦透露侯康配与赖萧配只差0.4%](https://so.toutiao.com/search?keyword=朱立伦透露侯康配与赖萧配只差0.4%)
 1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
-1. [公务车别停公交车 涉事人员被停职](https://so.toutiao.com/search?keyword=公务车别停公交车+涉事人员被停职)
-1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
-1. [美国一官员嫖娼遇警察卧底](https://so.toutiao.com/search?keyword=美国一官员嫖娼遇警察卧底)
 1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
-1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
-1. [全季回应男员工刷卡进女子房间](https://so.toutiao.com/search?keyword=全季回应男员工刷卡进女子房间)
+1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
+1. [公务车别停公交车 涉事人员被停职](https://so.toutiao.com/search?keyword=公务车别停公交车+涉事人员被停职)
 1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
-1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
-1. [皇马4-2双杀那不勒斯锁定小组头名](https://so.toutiao.com/search?keyword=皇马4-2双杀那不勒斯锁定小组头名)
-1. [男子患肾病吃半个月桔子查出尿毒症](https://so.toutiao.com/search?keyword=男子患肾病吃半个月桔子查出尿毒症)
+1. [女子手机定位男子家中警察协助调查](https://so.toutiao.com/search?keyword=女子手机定位男子家中警察协助调查)
 1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
+1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
 1. [业主装修发现卫生间承重墙填充泡沫](https://so.toutiao.com/search?keyword=业主装修发现卫生间承重墙填充泡沫)
-1. [16岁烈士骨骼线都没愈合](https://so.toutiao.com/search?keyword=16岁烈士骨骼线都没愈合)
-1. [武里南联一球员挑起冲突后越躲越远](https://so.toutiao.com/search?keyword=武里南联一球员挑起冲突后越躲越远)
-1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
+1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
 1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
+1. [北京曲协新领导班子产生](https://so.toutiao.com/search?keyword=北京曲协新领导班子产生)
 1. [全班23人请病假仅3萌娃坚强上课](https://so.toutiao.com/search?keyword=全班23人请病假仅3萌娃坚强上课)
+1. [三个老头成网红“拯救”国货洗衣粉](https://so.toutiao.com/search?keyword=三个老头成网红“拯救”国货洗衣粉)
+1. [男子患肾病吃半个月桔子查出尿毒症](https://so.toutiao.com/search?keyword=男子患肾病吃半个月桔子查出尿毒症)
+1. [广西一交警持棍击倒过路电动车](https://so.toutiao.com/search?keyword=广西一交警持棍击倒过路电动车)
+1. [16岁烈士骨骼线都没愈合](https://so.toutiao.com/search?keyword=16岁烈士骨骼线都没愈合)
+1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
+1. [房东将二居室改成七居室出租](https://so.toutiao.com/search?keyword=房东将二居室改成七居室出租)
+1. [男子将甲醇掺入白酒致4死获刑3年半](https://so.toutiao.com/search?keyword=男子将甲醇掺入白酒致4死获刑3年半)
+1. [“牛魔王夫妇”因男方负债600万分手](https://so.toutiao.com/search?keyword=“牛魔王夫妇”因男方负债600万分手)
+1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
+1. [丈夫赴非打工9年未归妻子起诉离婚](https://so.toutiao.com/search?keyword=丈夫赴非打工9年未归妻子起诉离婚)
+1. [媒体：房地产调整逐步到位](https://so.toutiao.com/search?keyword=媒体：房地产调整逐步到位)
+1. [刘亦菲换轮胎](https://so.toutiao.com/search?keyword=刘亦菲换轮胎)
+1. [地球收到1600万公里外的激光数据](https://so.toutiao.com/search?keyword=地球收到1600万公里外的激光数据)
+1. [买房不到一年每平米降价超4000元](https://so.toutiao.com/search?keyword=买房不到一年每平米降价超4000元)
+1. [车主高速遇障碍物停车清理未被扣分](https://so.toutiao.com/search?keyword=车主高速遇障碍物停车清理未被扣分)
+1. [武里南联一球员挑起冲突后越躲越远](https://so.toutiao.com/search?keyword=武里南联一球员挑起冲突后越躲越远)
+1. [献血事件女子丈夫：简化经过造成误解](https://so.toutiao.com/search?keyword=献血事件女子丈夫：简化经过造成误解)
+1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
+1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
+1. [航司回应“献血事件”：包机转运属实](https://so.toutiao.com/search?keyword=航司回应“献血事件”：包机转运属实)
+1. [拼多多市值一度超越阿里巴巴](https://so.toutiao.com/search?keyword=拼多多市值一度超越阿里巴巴)
+1. [马斯克：以要摧毁哈马斯别无选择](https://so.toutiao.com/search?keyword=马斯克：以要摧毁哈马斯别无选择)
+1. [全季回应男员工刷卡进女子房间](https://so.toutiao.com/search?keyword=全季回应男员工刷卡进女子房间)
+1. [皇马4-2双杀那不勒斯锁定小组头名](https://so.toutiao.com/search?keyword=皇马4-2双杀那不勒斯锁定小组头名)
 1. [欧冠：国米连扳三球3-3本菲卡](https://so.toutiao.com/search?keyword=欧冠：国米连扳三球3-3本菲卡)
 1. [欧冠：阿森纳6-0朗斯锁头名](https://so.toutiao.com/search?keyword=欧冠：阿森纳6-0朗斯锁头名)
-1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
 1. [胡锡进：尊重他人的正当话语权](https://so.toutiao.com/search?keyword=胡锡进：尊重他人的正当话语权)
 1. [湖南副研究员本人回应酒后骚扰异性](https://so.toutiao.com/search?keyword=湖南副研究员本人回应酒后骚扰异性)
-1. [房东将二居室改成七居室出租](https://so.toutiao.com/search?keyword=房东将二居室改成七居室出租)
-1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
 1. [曼联3-3加拉塔萨雷仍垫底](https://so.toutiao.com/search?keyword=曼联3-3加拉塔萨雷仍垫底)
-1. [地球收到1600万公里外的激光数据](https://so.toutiao.com/search?keyword=地球收到1600万公里外的激光数据)
-1. [丈夫赴非打工9年未归妻子起诉离婚](https://so.toutiao.com/search?keyword=丈夫赴非打工9年未归妻子起诉离婚)
 1. [国内油价或出现五连跌](https://so.toutiao.com/search?keyword=国内油价或出现五连跌)
 1. [“鹅腿阿姨”主打的是人间烟火](https://so.toutiao.com/search?keyword=“鹅腿阿姨”主打的是人间烟火)
-1. [买房不到一年每平米降价超4000元](https://so.toutiao.com/search?keyword=买房不到一年每平米降价超4000元)
-1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
 1. [浙江队出线只剩下理论可能](https://so.toutiao.com/search?keyword=浙江队出线只剩下理论可能)
 1. [警方扫黄前台通风报信：444全员开跑](https://so.toutiao.com/search?keyword=警方扫黄前台通风报信：444全员开跑)
 1. [“钱德勒”家人宣布捐出其全部遗产](https://so.toutiao.com/search?keyword=“钱德勒”家人宣布捐出其全部遗产)
 1. [15岁女生被奸杀案二审维持原判](https://so.toutiao.com/search?keyword=15岁女生被奸杀案二审维持原判)
-1. [女儿给父亲买“犟驴”蛋糕过生日](https://so.toutiao.com/search?keyword=女儿给父亲买“犟驴”蛋糕过生日)
 1. [名记：武里南联冲突恐遭亚足联重罚](https://so.toutiao.com/search?keyword=名记：武里南联冲突恐遭亚足联重罚)
 1. [总感冒是新冠导致免疫缺陷？专家回应](https://so.toutiao.com/search?keyword=总感冒是新冠导致免疫缺陷？专家回应)
 1. [前台北市长：“2024”回归蓝绿对决](https://so.toutiao.com/search?keyword=前台北市长：“2024”回归蓝绿对决)
@@ -65,7 +78,6 @@
 1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
 1. [支原体肺炎能否自愈](https://so.toutiao.com/search?keyword=支原体肺炎能否自愈)
 1. [海底捞部分门店不让跳“科目三”了](https://so.toutiao.com/search?keyword=海底捞部分门店不让跳“科目三”了)
-1. [男子将甲醇掺入白酒致4死获刑3年半](https://so.toutiao.com/search?keyword=男子将甲醇掺入白酒致4死获刑3年半)
 1. [神十六回家前拍下空间站首张全身照](https://so.toutiao.com/search?keyword=神十六回家前拍下空间站首张全身照)
 1. [媒体：“科目三”遭遇尴尬并不意外](https://so.toutiao.com/search?keyword=媒体：“科目三”遭遇尴尬并不意外)
 1. [湖南石门通报公职人员打人事件](https://so.toutiao.com/search?keyword=湖南石门通报公职人员打人事件)
@@ -79,7 +91,6 @@
 1. [西藏阿里全体公务员为女子献血？](https://so.toutiao.com/search?keyword=西藏阿里全体公务员为女子献血？)
 1. [市民买房烂尾被诉 法院：贷款不用还](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：贷款不用还)
 1. [小米Redmi Buds 5 Pro耳机发布](https://so.toutiao.com/search?keyword=小米Redmi+Buds 5 Pro耳机发布)
-1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
 1. [常见儿童呼吸道疾病症状有什么区别](https://so.toutiao.com/search?keyword=常见儿童呼吸道疾病症状有什么区别)
 1. [赖清德扬言打造“健康台湾”遭讽刺](https://so.toutiao.com/search?keyword=赖清德扬言打造“健康台湾”遭讽刺)
 1. [秦昊蒋欣新剧组“喜剧人”家庭](https://so.toutiao.com/search?keyword=秦昊蒋欣新剧组“喜剧人”家庭)
