--- a/archives/toutiao-search/2023-11-30.md
+++ b/archives/toutiao-search/2023-11-30.md
@@ -1,53 +1,79 @@
 # 2023-11-30
 
-共 225 条
+共 247 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 30 2023 14:01:00 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 30 2023 15:00:38 GMT+0800 (China Standard Time) -->
 1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
 1. [官方通报交警用棍击倒过路电动车](https://so.toutiao.com/search?keyword=官方通报交警用棍击倒过路电动车)
 1. [12月一批民生新规开始施行](https://so.toutiao.com/search?keyword=12月一批民生新规开始施行)
 1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
-1. [“羽绒服一哥”危险信号曝光](https://so.toutiao.com/search?keyword=“羽绒服一哥”危险信号曝光)
+1. [大学生“整顿”羽绒服市场](https://so.toutiao.com/search?keyword=大学生“整顿”羽绒服市场)
 1. [基辛格被称为“中国人民的老朋友”](https://so.toutiao.com/search?keyword=基辛格被称为“中国人民的老朋友”)
 1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
-1. [胡锡进评献血事件：应看到正面价值](https://so.toutiao.com/search?keyword=胡锡进评献血事件：应看到正面价值)
-1. [在菲被绑架6名中国人已有4人被撕票](https://so.toutiao.com/search?keyword=在菲被绑架6名中国人已有4人被撕票)
-1. [重庆辟谣预制板房将大拆迁](https://so.toutiao.com/search?keyword=重庆辟谣预制板房将大拆迁)
-1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
-1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
-1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
-1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
-1. [《新闻女王》多达15位前港姐参演](https://so.toutiao.com/search?keyword=《新闻女王》多达15位前港姐参演)
+1. [炒股博主：今年亏了20多万](https://so.toutiao.com/search?keyword=炒股博主：今年亏了20多万)
 1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
-1. [女孩拍照路旁交警帮撒落叶](https://so.toutiao.com/search?keyword=女孩拍照路旁交警帮撒落叶)
-1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
-1. [招生办女主任出轨校长？女方回应](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？女方回应)
+1. [重庆辟谣预制板房将大拆迁](https://so.toutiao.com/search?keyword=重庆辟谣预制板房将大拆迁)
+1. [西藏公务员给女孩输血事件全梳理](https://so.toutiao.com/search?keyword=西藏公务员给女孩输血事件全梳理)
+1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
+1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
+1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
+1. [德国总统访卡塔尔被晾在机场半小时](https://so.toutiao.com/search?keyword=德国总统访卡塔尔被晾在机场半小时)
+1. [俄外长专机被保加利亚拒绝飞越领空](https://so.toutiao.com/search?keyword=俄外长专机被保加利亚拒绝飞越领空)
+1. [媒体评献血事件：小姑姑身份应公布](https://so.toutiao.com/search?keyword=媒体评献血事件：小姑姑身份应公布)
 1. [多家友商纷纷向K70“开炮”](https://so.toutiao.com/search?keyword=多家友商纷纷向K70“开炮”)
+1. [大V谈富人关于楼市的3种认知](https://so.toutiao.com/search?keyword=大V谈富人关于楼市的3种认知)
+1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
 1. [马斯克爆粗口怒喷广告商](https://so.toutiao.com/search?keyword=马斯克爆粗口怒喷广告商)
-1. [专家：菲已成南海“麻烦制造者”](https://so.toutiao.com/search?keyword=专家：菲已成南海“麻烦制造者”)
+1. [南京闹市野猪乱窜被抓获](https://so.toutiao.com/search?keyword=南京闹市野猪乱窜被抓获)
+1. [多位美国政要悼念基辛格](https://so.toutiao.com/search?keyword=多位美国政要悼念基辛格)
+1. [拼多多员工前三季度人均创收1222万](https://so.toutiao.com/search?keyword=拼多多员工前三季度人均创收1222万)
+1. [演员马精武执教40年 学生个个大腕](https://so.toutiao.com/search?keyword=演员马精武执教40年+学生个个大腕)
+1. [锡安出战33分钟砍下33分8篮板6助攻](https://so.toutiao.com/search?keyword=锡安出战33分钟砍下33分8篮板6助攻)
+1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
+1. [业主装修发现卫生间承重墙填充泡沫](https://so.toutiao.com/search?keyword=业主装修发现卫生间承重墙填充泡沫)
+1. [基辛格去世 一个时代结束了](https://so.toutiao.com/search?keyword=基辛格去世+一个时代结束了)
+1. [以军进入难民营逮捕两巴勒斯坦青年](https://so.toutiao.com/search?keyword=以军进入难民营逮捕两巴勒斯坦青年)
 1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
-1. [曝华为新汽车公司估值高达2500亿元](https://so.toutiao.com/search?keyword=曝华为新汽车公司估值高达2500亿元)
+1. [小布什悼念基辛格](https://so.toutiao.com/search?keyword=小布什悼念基辛格)
+1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
+1. [菲或拉更多域外国家“巡航南海”](https://so.toutiao.com/search?keyword=菲或拉更多域外国家“巡航南海”)
 1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
+1. [00后边防女兵谈为国牺牲](https://so.toutiao.com/search?keyword=00后边防女兵谈为国牺牲)
+1. [基辛格逝世 儿子曾分享其长寿秘诀](https://so.toutiao.com/search?keyword=基辛格逝世+儿子曾分享其长寿秘诀)
+1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
+1. [德德玛孙女发长文缅怀奶奶](https://so.toutiao.com/search?keyword=德德玛孙女发长文缅怀奶奶)
+1. [胡锡进评献血事件：应看到正面价值](https://so.toutiao.com/search?keyword=胡锡进评献血事件：应看到正面价值)
+1. [支原体检测为何“假阴”率高](https://so.toutiao.com/search?keyword=支原体检测为何“假阴”率高)
+1. [男子一路尾随女子趁等电梯多次猥亵](https://so.toutiao.com/search?keyword=男子一路尾随女子趁等电梯多次猥亵)
+1. [媒体：柯文哲的地位和能量不可小觑](https://so.toutiao.com/search?keyword=媒体：柯文哲的地位和能量不可小觑)
+1. [“不干不净孩子没病”有道理吗](https://so.toutiao.com/search?keyword=“不干不净孩子没病”有道理吗)
+1. [标普：中国房地产即将触底](https://so.toutiao.com/search?keyword=标普：中国房地产即将触底)
+1. [王炳忠：台湾有条“统独”产业链](https://so.toutiao.com/search?keyword=王炳忠：台湾有条“统独”产业链)
+1. [媒体人盛赞李提香：真的好用](https://so.toutiao.com/search?keyword=媒体人盛赞李提香：真的好用)
+1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
+1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
+1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
+1. [“羽绒服一哥”危险信号曝光](https://so.toutiao.com/search?keyword=“羽绒服一哥”危险信号曝光)
+1. [在菲被绑架6名中国人已有4人被撕票](https://so.toutiao.com/search?keyword=在菲被绑架6名中国人已有4人被撕票)
+1. [《新闻女王》多达15位前港姐参演](https://so.toutiao.com/search?keyword=《新闻女王》多达15位前港姐参演)
+1. [女孩拍照路旁交警帮撒落叶](https://so.toutiao.com/search?keyword=女孩拍照路旁交警帮撒落叶)
+1. [招生办女主任出轨校长？女方回应](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？女方回应)
+1. [专家：菲已成南海“麻烦制造者”](https://so.toutiao.com/search?keyword=专家：菲已成南海“麻烦制造者”)
+1. [曝华为新汽车公司估值高达2500亿元](https://so.toutiao.com/search?keyword=曝华为新汽车公司估值高达2500亿元)
 1. [杨澜发文缅怀基辛格](https://so.toutiao.com/search?keyword=杨澜发文缅怀基辛格)
 1. [武汉大学92岁老建筑焕新开放](https://so.toutiao.com/search?keyword=武汉大学92岁老建筑焕新开放)
-1. [“不干不净孩子没病”有道理吗](https://so.toutiao.com/search?keyword=“不干不净孩子没病”有道理吗)
 1. [基辛格最后对中美关系的肺腑之言](https://so.toutiao.com/search?keyword=基辛格最后对中美关系的肺腑之言)
 1. [人类幼崽治愈系宝宝](https://so.toutiao.com/search?keyword=人类幼崽治愈系宝宝)
 1. [哈以双方完成第六批被扣押人员交换](https://so.toutiao.com/search?keyword=哈以双方完成第六批被扣押人员交换)
-1. [男子一路尾随女子趁等电梯多次猥亵](https://so.toutiao.com/search?keyword=男子一路尾随女子趁等电梯多次猥亵)
-1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
 1. [中纪委官网发布：“内鬼”何江被查](https://so.toutiao.com/search?keyword=中纪委官网发布：“内鬼”何江被查)
-1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
 1. [柯文哲爆料扯上国民党 赵少康回应](https://so.toutiao.com/search?keyword=柯文哲爆料扯上国民党+赵少康回应)
 1. [丈夫赴非打工9年未归妻子起诉离婚](https://so.toutiao.com/search?keyword=丈夫赴非打工9年未归妻子起诉离婚)
 1. [男子割喉杀妻案今日开庭 直击现场](https://so.toutiao.com/search?keyword=男子割喉杀妻案今日开庭+直击现场)
-1. [00后边防女兵谈为国牺牲](https://so.toutiao.com/search?keyword=00后边防女兵谈为国牺牲)
 1. [恒大物业起诉中国恒大背后](https://so.toutiao.com/search?keyword=恒大物业起诉中国恒大背后)
 1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
 1. [女子爱吃生腌长寄生虫 被切除子宫](https://so.toutiao.com/search?keyword=女子爱吃生腌长寄生虫+被切除子宫)
 1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
-1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
 1. [王文序已任浙江省委常委](https://so.toutiao.com/search?keyword=王文序已任浙江省委常委)
 1. [中国驻美大使谈基辛格去世](https://so.toutiao.com/search?keyword=中国驻美大使谈基辛格去世)
 1. [以军在约旦河西岸与巴勒斯坦人冲突](https://so.toutiao.com/search?keyword=以军在约旦河西岸与巴勒斯坦人冲突)
@@ -57,7 +83,6 @@
 1. [广西一交警持棍击倒过路电动车](https://so.toutiao.com/search?keyword=广西一交警持棍击倒过路电动车)
 1. [4个公租房小区排查出766户公职人员](https://so.toutiao.com/search?keyword=4个公租房小区排查出766户公职人员)
 1. [太原3.7级地震属正常地质构造活动](https://so.toutiao.com/search?keyword=太原3.7级地震属正常地质构造活动)
-1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
 1. [大学生游华山失联11天 警方排除刑案](https://so.toutiao.com/search?keyword=大学生游华山失联11天+警方排除刑案)
 1. [斯图尔特想在詹姆斯头上暴扣](https://so.toutiao.com/search?keyword=斯图尔特想在詹姆斯头上暴扣)
 1. [哈马斯称三被扣人员在以空袭中身亡](https://so.toutiao.com/search?keyword=哈马斯称三被扣人员在以空袭中身亡)
@@ -66,7 +91,6 @@
 1. [女儿给父亲买“犟驴”蛋糕过生日](https://so.toutiao.com/search?keyword=女儿给父亲买“犟驴”蛋糕过生日)
 1. [雷军回应小米被称组装厂](https://so.toutiao.com/search?keyword=雷军回应小米被称组装厂)
 1. [男子同时患甲流和支原体高烧至39℃](https://so.toutiao.com/search?keyword=男子同时患甲流和支原体高烧至39℃)
-1. [标普：中国房地产即将触底](https://so.toutiao.com/search?keyword=标普：中国房地产即将触底)
 1. [雷军向武大的捐赠相当1.4%个人资产](https://so.toutiao.com/search?keyword=雷军向武大的捐赠相当1.4%个人资产)
 1. [卢伟冰对比iQOO引多家厂商高管下场](https://so.toutiao.com/search?keyword=卢伟冰对比iQOO引多家厂商高管下场)
 1. [泰国前总理巴育担任枢密院大臣](https://so.toutiao.com/search?keyword=泰国前总理巴育担任枢密院大臣)
@@ -85,7 +109,6 @@
 1. [女大学生当街撞衫50岁大妈](https://so.toutiao.com/search?keyword=女大学生当街撞衫50岁大妈)
 1. [中国向联合国机构提供百万美元援助](https://so.toutiao.com/search?keyword=中国向联合国机构提供百万美元援助)
 1. [胡锡进：中国人不缺大信心](https://so.toutiao.com/search?keyword=胡锡进：中国人不缺大信心)
-1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
 1. [基辛格逝世：其精神的现实意义](https://so.toutiao.com/search?keyword=基辛格逝世：其精神的现实意义)
 1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
 1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
@@ -116,7 +139,6 @@
 1. [刘亦菲换轮胎](https://so.toutiao.com/search?keyword=刘亦菲换轮胎)
 1. [湖南石门通报公职人员打人事件](https://so.toutiao.com/search?keyword=湖南石门通报公职人员打人事件)
 1. [皇马近4场各项赛事全胜 狂轰15球](https://so.toutiao.com/search?keyword=皇马近4场各项赛事全胜+狂轰15球)
-1. [业主装修发现卫生间承重墙填充泡沫](https://so.toutiao.com/search?keyword=业主装修发现卫生间承重墙填充泡沫)
 1. [多地推动一刻钟便民生活圈建设](https://so.toutiao.com/search?keyword=多地推动一刻钟便民生活圈建设)
 1. [患儿挤爆广州儿科门急诊？记者走访](https://so.toutiao.com/search?keyword=患儿挤爆广州儿科门急诊？记者走访)
 1. [朱立伦透露侯康配与赖萧配只差0.4%](https://so.toutiao.com/search?keyword=朱立伦透露侯康配与赖萧配只差0.4%)
